before duplicating and removing GSM

--- a/template.tex
+++ b/template.tex
@@ -88,11 +88,12 @@
 \maketitle                        % DO NOT DELETE THIS LINE
 
 \begin{synopsis}
-xxx
+We simulate the focusing of partial coherent beams produced by fourth-generation storage rings with Wofry 1D, a newly developed tool of undulator radiation coherent mode decomposition in 1D. We observe the shift and degradation of the focus when the numerical aperture is reduced by a slit. The pairing of two transfocators to assure a fixed focal position is studied and the resulting beam sizes analyzed. 
+% In this paper we study the focal parameters (position, size, intensity) given by a partial coherent beam, where the NA and coherence fraction are controlled by an aperture. We analyze the focal position originated by a compound system of two lenses, CRLs or transfocators.
 \end{synopsis}
 
 \begin{abstract}
-Abstract goes here.
+We simulate the focusing of partial coherent beams produced by fourth-generation storage rings. We used a new software tool to perform coherent mode decomposition of the undulator radiation in 1D. The analysis of a focusing system, based on x-ray lenses, shows the shift and degradation of the focus when the numerical aperture is reduced by a slit. The pairing of two transfocators to assure a fixed focal position is studied and the resulting beam sizes analyzed. The results shows that the synchrotron source imaged by two paired undulators is highly dependent on the aperture used to control the coherence fraction. 
 \end{abstract}
 
 
@@ -109,48 +110,15 @@ Recent fourth-generation storage-ring-based X-ray synchrotron sources deliver ph
 
 The diffraction effect at the slits and finite acceptance of the elements not only shifts the focal point, but also changes the focal dimensions, as we will see later. These facts are critical when designing beamlines with several coupled focusing elements. We study this phenomenon applied to the project for the new ID18 beamline at the upgraded EBS-ESRF storage ring. This beamline will produce highly coherent beams with a variable cross section at the sample position. Two refractive systems (transfocators) are paired to allow a varying focal size, whereas a slit placed upstream from the transfocators is used to control the coherent fraction. The optical matching of the transfocators is studied in detail, and is strongly correlated with the slit aperture (or coherent fraction). The study is performed with a newly developed algorithm for coherent mode decomposition of the undulator beams. The method proposed is very fast allowing parametric simulations in a laptop.
 
-% In this paper we study the focal parameters (position, size, intensity) given by a partial coherent beam, where the NA and coherence fraction are controlled by an aperture. We analyze the focal position originated by a compound system of two lenses, CRLs or transfocators.
-
-
-% Pairing two transfocators permits to create a focal spot with size that can adapt to the sample dimensions. The transfocators are design to focus the beam to a spot of variable size in a given interval for a large photon energy range. 
-
-% For this analysis, we have developed an innovative algorithm for fully describing partial coherence from undulator beams using coherent mode decomposition.
-
-% This method is based on the separated analysis of the horizontal and vertical directions (1D model). The results are compared with fully 2D methods (SHADOW hybrid \cite{XX}, SRW \cite{XX}, COMSYL \cite{XX}). We apply the results to the study of a two transfocator system that is being designed for the new ID18 beamline at the upgraded EBS-ESRF \cite{XX}.  
-
 This is obtained by studying separately the horizontal and vertical planes, therefore implementing a 1D model. The results of this model are verified against 2D models using Monte-Carlo multielectron propagation with SRW and also 2D coherent mode decomposition with COMSYL. It is also shown that ray-tracing simulations using the ``hybrid"" method \cite{codeHYBRID} give correct results for these systems. 
 
 The paper is organized as follows. Section 2 summarizes the methodology used for 1D coherent mode decomposition of undulator beams. Section 3 analyzes the focusing of partially coherent beams with a single refractive system (lens). Section 4 discusses the pairing of two refractive systems. Section 5 shows simulations for the full beamline and compares different methodologies for a selected case. A general discussion is in section 6 and concluding remarks in section 7. 
 
 
-% \todo{too much lens oriented.. turn it to partial coherence...}
-
-% After the first experimental demonstration of the feasibility of using lenses to focus synchrotron X-ray beams \cite{Snigirev1996}, an exceptional development has been produced in the field. It concerns the material used (typically Be, Al, and C$^*$), the surface shaping methods (punched lenses \cite{XX}, lithographic techniques \cite{XX}), reducing of the surface errors (shape, waviness and roughness), and different techniques for piling lenses. Single lenses with a shape designed to minimize (e.g., parabolic \cite{XX}) or completely reduce optical aberrations (ellipses \cite{XX}, cartesian ovals \cite{XX}) can be used for micro- and nano-focusing \cite{XX} applications. A Compound Refractive Lense (CRL) is a pile of single lenses allowing shorting the focal length. There are typically used to focus or collimate the beam, but they can also perform as monochromators in combination with an slit that select a photon energy bandwidth exploiting the energy-dispersion (chromatic aberration) of the light refraction. A transfocator is a pile of CRLs with possibility of switching on and off the individual CRLs, thus providing an almost continuous variation of the focal distance. 
-
-% A lens system for X-ray beamline applications is usually described by parameters related to the lens focal $F$ (typically the curvature $R$ and refraction index $n=1-\delta+i\beta$) which can be approximated by the equation
-% \begin{equation}
-%     \label{eq:F}
-%     F=\frac{R}{2 N \delta},
-% \end{equation}
-% and the lens absorption, which depends on $\beta$ and is used to define a variety of parameters such as the effective aperture \cite{XX}, and gain \cite{XX}. For multiple lenses (CRLs or transfocators), the global focal distance is $F^{-1}=F_1^{-1}+F_2^{-1}+...$. 
-
-% For synchrotron beamlines, we are interested in the position of the focal spot and the ``size" of the focal spot. If the source is placed at a distance $p$ from the lens, applying geometrical optics, the beam refracted by the lens has its waist at a distance $q$ given by the lens equation
-% \begin{equation}
-%     \label{eq:lens}
-%     \frac{1}{f} = \frac{1}{p} + \frac{1}{q},
-% \end{equation}
-% therefore $q=F p / (p-f)$. The system has a magnification $M=q/p$, so for a source of size $s$ the image at the waist has a lateral dimension of $Ms$. 
-
-% This last result, which is well known by beamline designers, operators and users, is valid using incoherent beams, or coherent beams with large numerical aperture (NA). In the case of coherent beams with reduced numerical apertures, 
-
-
-
 \section{One dimensional coherent mode decomposition of an undulator source and propagation along a beamline with lenses}
 
-For the calculations presented in this paper we have developed a new tool for dealing with partially coherence beams produced by undulators in low-emittance storage rings. For that, we developed a 1D model of the coherent mode decomposition previously developed in 2D \cite{XX}. The motivation for developing these new tools is to perform quick calculations (e.g., being able to perform parametric calculations in a laptop) with high accuracy in the simulation of the source and beam propagation. We believe that the separation of the real 2D wavefront in two separated 1D wavefronts is well justified for most synchrotron beamlines, where the cross-talk between these two directions is small. 
-% This is justified by comparing results with more CPU demanding 1D simulations. 
-The tools developed here are included in the OASYS toolbox \cite{XX}, available in the WOFRY add-on \cite{XX}. These tools are completely scriptable so they can be used from the OASYS interface, which also creates scripts that can be a posteriori modified for batch runs. 
-
+For the calculations presented in this paper we have developed a new tool for dealing with partially coherence beams produced by undulators in low-emittance storage rings. For that, we developed a 1D model of the coherent mode decomposition previously developed in 2D \cite{glass2017}. The motivation for developing these new tools is to perform quick calculations (e.g., being able to perform parametric calculations in a laptop) with high accuracy in the simulation of the source and beam propagation. We believe that the separation of the real 2D wavefront in two separated 1D wavefronts is well justified for most synchrotron beamlines, where the cross-talk between these two directions is small. 
+The tools developed here are included in the OASYS toolbox \cite{codeOASYS}, available in the WOFRY add-on \cite{XX}. These tools are completely scriptable so they can be used from the OASYS interface, which also creates scripts that can be a posteriori modified for batch runs. 
 
 
 \subsection{Partial coherence modeling the undulator beam using coherent mode decomposition}
@@ -260,12 +228,6 @@ The profile of a real lens $z(x)$ can be decomposed in the ideal parabolic profi
 \label{sec:refractorCorrector}
 One can imagine a refractive object to focus an arbitrary incoming wavefront to a given point placed at a distance $D$. In other words, this object would transform the incoming wavefront into a spherical (circular in 1D) wavefront collapsing to the focus. The profile of such refractive ``corrector"  can be calculated using the phase difference $\Delta\phi(x)=\phi_S(x)-\phi(x)$ where $\phi_S=k x^2 / (2 D_w)$ is the phase of the circular wave collapsing at $D_w$, $k$ is the wavenumber ($k=2\pi/\lambda$) and $\phi$ is the phase of the incoming wavefront. The corrective profile is $z(x)=-\Delta\phi/(k \delta(\omega))$.
 
-% \subsection{Other 2D methods}
-% \begin{itemize}
-%     \item {SHADOW-HYBRID}
-%     \item SRW Multielectron
-%     \item COMSYL
-% \end{itemize}
 
 % In addition, we also compared the results with a Gaussian Shell-model in 1D, which is the most simplistic approximation among all partial coherent methods used in this work. 
 
@@ -326,7 +288,6 @@ Let us consider an aperture of dimension $a$ placed between the source and a len
 
 
 % \end{table}
-
 
 We thus compute the beam evolution using wave optics. The insertion device (ID) source is a U18 undulator (period $\lambda_u$~\SI{18}{\milli\meter}) with $N_u$=138 periods. The gap is tuned to have the first harmonic at $E$=7 keV (deflecting parameter $K$=1.851 ). 
 
@@ -674,26 +635,9 @@ We can conclude that the hybrid ray tracing is a valid method to obtain good val
 
 \newpage
 
-% \begin{figure}
-%     \centering
-%     % \includegraphics[width=0.95\textwidth]{figures/Figure_magnification_99.png}
-%     %\includegraphics[width=0.95\textwidth]{figures/Figure_magnification_123.png}
-    
-%     \includegraphics[width=0.95\textwidth]{figures/sizes_h_hybrid.eps}
-%     \includegraphics[width=0.95\textwidth]{figures/sizes_v_hybrid.eps}
-        
-%     \caption{Focal sizes obtained by hybrid ray tracing method, for two slit aperture cases, compared with 1D Model (WOFRY). Analytical values are same as Figure \ref{fig:focalSizes}. 
-%     % Numerical values \ingreen{green} are obtained for the slit (upstream lens 1) either open or closed to $a$~= \SI{25}{\micro\meter}.
-%     }
-%     \label{fig:focalSizes_hybrid}
-% \end{figure}
-
-
-
 
 \section{Discussion}
 \label{sec:discussion}
-
 
 \subsection{f1 f2 trajectories and focal sizes} 
 
@@ -701,7 +645,7 @@ From the results shown in the last section, it is clear that the focusing of the
 This is evident in Fig. 3: in vertical most of the typical apertures (up to XX um) still makes the system to image the source at the ID center to the focal plane, whereas in horizontal, the cropping needed to get $CF_h=$ 90\% already makes the effect of "shifting" the source from its real position (ID center) to the slit position. Although this shift of the focal position has been predicted and calculated before (see \cite{tanaka} for Gaussian beams, or \cite{whej} for synchrotron beams) our calculations in Fig. 3 reveal two important facts: i) the shift exists but it is directed upstream to the position defined by the geometrical optics for the slit image (and not downstream to the lens position, as found for the systems analyzed in the references mentioned), and ii) the focal size is highly degraded (its size increases) when the beam focus is found in between the two positions defined by the geometrical optics.  
 
 
-Pairing two transfocators consists in matching their focal distances to guarantee the focus at the desired focal plane (the sample position). By matching the lens equations of the two lenses, it is possible the analytical expression in Eq.~XX permits to calculate f2 as a function of f1. This can be done for the two cases: with the source at the ID center (limit of high NA, no cropping) of with the source at the slit (pinhole limit when NA$\arrow$0). The analytical equations diverge at the point where lens 1 focuses onto f2.
+Pairing two transfocators consists in matching their focal distances to guarantee the focus at the desired focal plane (the sample position). By matching the lens equations of the two lenses, it is possible the analytical expression in Eq. XX permits to calculate f2 as a function of f1. This can be done for the two cases: with the source at the ID center (limit of high NA, no cropping) of with the source at the slit (pinhole limit when NA$\arrow$0). The analytical equations diverge at the point where lens 1 focuses onto f2.
 \inblue{Looking at Fig.~\ref{fig:f1f2map}a we observe an asymptotic approach (for $f1<$~\SI{25}{\meter} or $f1>$~\SI{70}{\meter}) of the numerical results to geometrical optics results, mostly with source at the ID, but sometimes (with closed slit) to the case of the source at the slit position. However, this case is obtained in H with a reasonable aperture $a=$~\SI{40.4}{\micro\meter}, a value of interest in real cases (to get $CF_h=$90\%) but with a less interesting aperture in V $a=$~\SI{25}{\micro\meter}, because high coherence can be obtained with more opened slits without compromising transmission. }
 Our numerical simulation of the (f1,f2) trajectory maps present two characteristics: i) they asymptotically match the analytical positions for sufficiently high of small $f_1$, either the position obtained when the source is at ID (high NA ) or when the source is at the slit (low NA), and ii) the analytical singularities found in $f_2$ when lens 1 focuses on lens 2 is smoothed and the transition from one branch to another becomes soft. It is softer for smaller NAs in the horizontal (Fig. 4a) but not relevant in the vertical (Fig. 4b). The inflexion point shifts from the position "ID center" to the "slit center" when NA reduces. But, as discussed in the last paragraph, this shifting is evident in the horizontal for the usual slit openings, but is not yet relevant in vertical for common apertures. 
 
@@ -775,6 +719,13 @@ We have studied in detail the focusing of a partial coherent beam (as produced b
 We calculated numerically the map or trajectory of focal distances $(f_1,f_2)$ needed to maintain the focus at the image plane. The beam size values obtained for different cases are very different of the ones predicted by the geometrical optics.  
 
 Numerical calculations for this work have been done using a newly developed method of coherent mode decomposition in 1D. This method is very fast, and many simulations can be run in a laptop, therefore it is idoneous for parametric calculations as presented here. This method is available in the Wofry add-on of the OASYS\cite{codeOASYS} suite. Four cases are also calculated and compared among them using the other methods available in OASYS, like the full 2D coherent mode decomposition using COMSYL \cite{codeCOMSYL}, the OASYS interface for the SRW \cite{codeSRW} code, and ray tracing with SHADOW\cite{codeSHADOW} using the hybrid method proposed by \cite{codeHYBRID}. OASYS workspaces for the simulations performed in this paper are available at {\tt https://github.com/oasys-esrf-kit/...} 
+
+
+% Pairing two transfocators permits to create a focal spot with size that can adapt to the sample dimensions. The transfocators are design to focus the beam to a spot of variable size in a given interval for a large photon energy range. 
+
+% For this analysis, we have developed an innovative algorithm for fully describing partial coherence from undulator beams using coherent mode decomposition.
+
+% This method is based on the separated analysis of the horizontal and vertical directions (1D model). The results are compared with fully 2D methods (SHADOW hybrid \cite{XX}, SRW \cite{XX}, COMSYL \cite{XX}). We apply the results to the study of a two transfocator system that is being designed for the new ID18 beamline at the upgraded EBS-ESRF \cite{XX}.  
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
